--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ button {
 
 <body>
 
-<img src="foto1.jpg" alt="Nasze zdjęcie">
+<img src="foto1.jpeg" alt="Nasze zdjęcie">
 <h1>Czy zostaniesz moją walentynką? ❤️</h1>
 
 <div class="buttons">
