--- a/tak.html
+++ b/tak.html
@@ -26,7 +26,7 @@ h1 {
 <body>
 
 <h1>💖 Wiedziałem! Kocham Cię 💖</h1>
-<img src="foto2.jpeg" alt="Nasze zdjęcie">
+<img src="foto2.jpg" alt="Nasze zdjęcie">
 
 </body>
 </html>
