--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body {
     padding: 0;
     font-family: 'Comic Sans MS', cursive;
     background: linear-gradient(135deg, #ffb6c1, #ffe4e1);
-    overflow: hidden;
+    overflow: auto;
     text-align: center;
 }
 
